--- a/index.html
+++ b/index.html
@@ -99,27 +99,16 @@
           <div class="divider-custom-line"></div>
         </div>
         <!-- About Section Content-->
-        <div class="row">
-          <div class="col-lg-7 ml-auto">
-            <p>
-              JgkGSDgldblkBDKLbh
-            </p>
+        <div class="text-center">
+          <div class="">
+            <p>JavaScript</p>
+            <p>NodeJS</p>
+            <p>Angular</p>
+            <p>Python</p>
+            <p>AWS</p>
+            <p>Application Deployment</p>
+            <p>Git</p>
           </div>
-          <!-- <div class="col-lg-4 ml-auto">
-            <p class="pre-wrap lead">
-              Freelancer is a free bootstrap theme created by Start Bootstrap.
-              The download includes the complete source files including HTML,
-              CSS, and JavaScript as well as optional SASS stylesheets for easy
-              customization.
-            </p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="pre-wrap lead">
-              You can create your own custom avatar for the masthead, change the
-              icon in the dividers, and add your email address to the contact
-              form to make it fully functional!
-            </p>
-          </div> -->
         </div>
       </div>
     </section>
@@ -136,22 +125,18 @@
           <div class="divider-custom-line"></div>
         </div>
         <!-- About Section Content-->
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="pre-wrap lead">
-              Freelancer is a free bootstrap theme created by Start Bootstrap.
-              The download includes the complete source files including HTML,
-              CSS, and JavaScript as well as optional SASS stylesheets for easy
-              customization.
-            </p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="pre-wrap lead">
-              You can create your own custom avatar for the masthead, change the
-              icon in the dividers, and add your email address to the contact
-              form to make it fully functional!
-            </p>
-          </div>
+        <div class="text-center">
+          <p>
+            Hi there, Iam Mission-driven full-stack Developer with 3+ years of
+            experience. I have wide range of knowledge in various web and
+            desktop application
+          </p>
+          <p>
+            Motivation: Keep failing until you succeed and fly high with bright
+            colours
+            <span class="fa fa-bolt" aria-hidden="true"></span>
+            <span class="fa fa-bolt" aria-hidden="true"></span>
+          </p>
         </div>
       </div>
     </section>
