--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <!-- About Section Content-->
         <div class="text-center">
-          <div class="">
+          <div class="move">
             <p>JavaScript</p>
             <p>NodeJS</p>
             <p>Angular</p>
