Added pointer for skills

--- a/index.html
+++ b/index.html
@@ -99,7 +99,35 @@
           <div class="divider-custom-line"></div>
         </div>
         <!-- About Section Content-->
-        <div class="text-center">
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-center">
+              1. JavaScript
+            </div>
+          </br>
+            <div class="d-flex flex-column align-items-center">
+              2. NodeJS
+            </div>
+          </br>
+            <div class="d-flex flex-column align-items-center">
+              3. Angular
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-center">
+              4. AWS
+            </div>
+          </br>
+            <div class="d-flex flex-column align-items-center">
+              5. Python
+            </div>
+          </br>
+            <div class="d-flex flex-column align-items-center">
+              6. Application Deployment
+            </div>
+          </div>
+        </div>
+        <!-- <div class="text-center">
           <div class="move">
             <p>JavaScript</p>
             <p>NodeJS</p>
@@ -109,7 +137,7 @@
             <p>Application Deployment</p>
             <p>Git</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <section class="page-section bg-primary text-white mb-0" id="about">
