--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="mb-4">LOCATION</h4>
             <p class="pre-wrap lead mb-0">
-              Mumbai, Dombivli 421201
+              Mumbai, India - 421201
             </p>
           </div>
           <!-- Footer Social Icons-->
